# list_input

./: .coveragerc  .gitignore  .isort.cfg  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
list_input/: __init__.py  __version__.py  listinput.py  listwidget.py
list_input/static/list_input/scripts/: list_widget.js
list_input/templates/list_input/: list_widget.html
tests/: test_list_input.py
